Fix skillcard issues on Firefox 68

--- a/src/components/cards/skill/styles.scss
+++ b/src/components/cards/skill/styles.scss
@@ -7,7 +7,8 @@
     align-items: center;
 
     img.skill-img {
-        height: 100%;
+        // height is set within the component
+
         filter: grayscale(100%);
         &:hover {
             filter: grayscale(0);
